Add `rewrite` support for `java.migrate.UpgradeToJava17`