@@ -384,7 +384,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Integer generateInteger() {
-    return new Integer(generateInt());
+    return Integer.valueOf(generateInt());
   }
 
   @Generates
@@ -395,7 +395,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Long generateLongObject() {
-    return new Long(generateLong());
+    return Long.valueOf(generateLong());
   }
 
   @Generates
@@ -406,7 +406,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Float generateFloatObject() {
-    return new Float(generateFloat());
+    return Float.valueOf(generateFloat());
   }
 
   @Generates
@@ -417,7 +417,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Double generateDoubleObject() {
-    return new Double(generateDouble());
+    return Double.valueOf(generateDouble());
   }
 
   @Generates
@@ -428,7 +428,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Short generateShortObject() {
-    return new Short(generateShort());
+    return Short.valueOf(generateShort());
   }
 
   @Generates
@@ -439,7 +439,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Byte generateByteObject() {
-    return new Byte(generateByte());
+    return Byte.valueOf(generateByte());
   }
 
   @Generates
@@ -450,7 +450,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Character generateCharacter() {
-    return new Character(generateChar());
+    return Character.valueOf(generateChar());
   }
 
   @Generates
@@ -461,7 +461,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Boolean generateBooleanObject() {
-    return new Boolean(generateBoolean());
+    return Boolean.valueOf(generateBoolean());
   }
 
   @Generates
